Header image example change

--- a/Storytelling-MapTour-2.4.0/index.html
+++ b/Storytelling-MapTour-2.4.0/index.html
@@ -190,7 +190,7 @@
 		<style>
 			/* CUSTOM CSS RULES */
 			div#header {
-				background-color: #a1a1a1 !important;
+				background-image: url('resources/icons/esri-logo.png');
 			}
 		</style>
 		<div id="header">
